[tool.poetry]
name = "keysound"
version = "0.1.0"
description = ""
authors = ["Jabba Laci <jabba.laci@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynput = "^1.7.6"
xlib = "^0.21"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
numpy = "^1.26.4"
simpleaudio = "^1.0.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
